# mem

./: .gitignore  Cargo.toml  README.md  setup.sh
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: BubbleMenu.tsx  DeleteConfirm.tsx  NoteFooter.tsx  Palette.tsx  StatusBar.tsx  TagGraph.tsx  TagList.tsx  TopBar.tsx
apps/desktop/src/extensions/: hashtag.ts
apps/desktop/src/styles/: delete.css  editor.css  footer.css  graph.css  palette.css  statusbar.css  theme.css  topbar.css
crates/mem-app-api/: Cargo.toml
crates/mem-cli/: Cargo.toml
crates/mem-cli/src/: main.rs
crates/mem-core/: Cargo.toml
crates/mem-core/src/: error.rs  index.rs  lib.rs  note.rs  search.rs  sync.rs  tags.rs  types.rs  util.rs  vault.rs
crates/mem-core/tests/: ops.rs
crates/mem-domain/: Cargo.toml
crates/mem-domain/src/: lib.rs
crates/mem-index/: Cargo.toml
crates/mem-index/src/: db.rs  indexer.rs  lib.rs  schema.rs  search.rs
crates/mem-mcp/: Cargo.toml
crates/mem-mcp/src/: lib.rs  main.rs  params.rs  server.rs
crates/mem-mcp/tests/: smoke.rs
crates/mem-parser/: Cargo.toml
crates/mem-parser/src/: lib.rs
crates/mem-storage/: Cargo.toml
crates/mem-storage/src/: config.rs  lib.rs  storage.rs  vault.rs
crates/mem-sync/: Cargo.toml
crates/mem-sync/src/: lib.rs
docs/: mcp.md
scripts/: build.sh  bump-version.sh  bump.sh  install.sh
