[workspace]
members = [
    "crates/mem-domain",
    "crates/mem-storage",
    "crates/mem-index",
    "crates/mem-parser",
    "crates/mem-sync",
    "crates/mem-app-api",
    "crates/mem-core",
    "crates/mem-cli",
    "crates/mem-mcp",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "1.9.2"
