[package]
name = "mem-cli"
version.workspace = true
edition = "2024"

[[bin]]
name = "mem"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
dialoguer = "0.11"
clap = { version = "4.5.60", features = ["derive"] }
mem-core = { version = "1.7.1", path = "../mem-core" }
mem-storage = { version = "1.2.0", path = "../mem-storage" }
